--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
-<app-banner></app-banner>
-<app-servicos-disponiveis></app-servicos-disponiveis>
-<app-about></app-about>
-<app-contact></app-contact>
-<app-footer></app-footer>
+<app-header></app-header>
+
 <router-outlet></router-outlet>
+
+<app-footer></app-footer>
