--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,7 +12,7 @@
       </div>
       <div class="collapse navbar-collapse navbar-right" id="myNavbar">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#banner">Home</a></li>
+          <li><a [routerLink]=" ['/']">Home</a></li>
           <li class=""><a href="#service">Serviços</a></li>
           <li class=""><a href="#about">Sobre</a></li>
           <li class=""><a href="#contact">Contato</a></li>
