--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default navbar-fixed-top">
+<nav class="navbar navbar-default" [class.navbar-fixed-top]="rotaAtualEhHome">
   <div class="container">
     <div class="col-md-12">
       <div class="navbar-header">
