ajustes de template

--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -1,8 +1,9 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container">
-      <h1>Easy start with Vlava</h1>
-      <h2>We are team of talented designers making websites with Bootstrap</h2>
-      <a href="#about" class="btn-get-started scrollto">Get Started</a>
+      <h1>#FiqueEmCasa</h1>
+      <h2>Faça seu agendamento de vacinação 100% online agora mesmo! </h2>
+      <a (click)="navegarPara('pre-cadastro')" class="btn-banner scrollto">Agendar vacina</a>
+      <a (click)="navegarPara('reportar-evento-adverso')" class="btn-banner">Reportar evento adverso</a>
     </div>
   </section><!-- End Hero -->
