ajustes de template

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -4,24 +4,19 @@
 
         <div class="row content">
           <div class="col-lg-6">
-            <h2>Eum ipsam laborum deleniti velitena</h2>
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assum perenda sruen jonee trave</h3>
+            <h2>Sobre</h2>
+            <h3>Portal desenvolvido pela <a href="https://www.ids.inf.br/">IDS Desenvolvimento de Software e Assessoria
+              Ltda</a> com o intuito de auxiliar clientes e parceiros durante a campanha de vacinação da COVID-19. </h3>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum
+              Um dos principais caminhos para fortalecer a gestão pública, proteger seu cidadão e ter secretarias municipais que realmente enfrentem qualquer crise, é por meio da tecnologia. Mais do que nunca, agora é preciso inovar na gestão pública.
+            </p>
+            <p>
+              Municípios que contam com o sistema de gestão IDS já possuem ferramentas para ter uma gestão pública mais eficiente. Isso porque há tempos a IDS vem dedicando seus esforços para auxiliar em tempos de pandemia. Conte com a gente na sua gestão pública.
             </p>
             <ul>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequa</li>
-              <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in</li>
             </ul>
-            <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
-            </p>
           </div>
         </div>
 
