--- a/src/app/asked-questions/asked-questions.component.html
+++ b/src/app/asked-questions/asked-questions.component.html
@@ -3,59 +3,76 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Frequently Asked Questions</h2>
+          <h2>Perguntas Frequentes</h2>
         </div>
 
         <div class="row  d-flex align-items-stretch">
 
           <div class="col-lg-6 faq-item">
             <i class="bx bx-help-circle"></i>
-            <h4>Non consectetur a erat nam at lectus urna duis?</h4>
+            <h4>Como faço meu cadastro?</h4>
             <p>
-              Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+              Para se cadastrar, você deverá escolher o botão "agendar vacina" e inserir seus dados pessoais. Após, se houver ofertas para o seu grupo ou faixa etária, basta efetuar o agendamento.
             </p>
           </div>
 
           <div class="col-lg-6 faq-item">
             <i class="bx bx-help-circle"></i>
-            <h4>Feugiat scelerisque varius morbi enim nunc faucibus a pellentesque?</h4>
+            <h4>Quem pode se vacinar nesse momento?</h4>
             <p>
-              Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim.
+              Nesse momento a vacinação contempla pessoas acima dos 36 anos com comorbidades.
             </p>
           </div>
 
           <div class="col-lg-6 faq-item">
             <i class="bx bx-help-circle"></i>
-            <h4>Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi?</h4>
+            <h4>Só poderei me vacinar se agendar?</h4>
             <p>
-              Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus.
+              Sim, para evitar aglomeração, longas filas e otimizar os profissionais, a secretaria de saúde fará a oferta de vacinas conforme demanda, e qualquer cidadão (dentro do grupo atual) poderá efetuar o agendamento para um dos diversos pontos espalhados pela cidade. CASO VOCÊ TENHA ALGUM PROBLEMA, VOCÊ PODERÁ SER VACINADO, DESDE QUE EXISTA DISPONIBILIDADE NO LOCAL.
             </p>
           </div>
 
           <div class="col-lg-6 faq-item">
             <i class="bx bx-help-circle"></i>
-            <h4>Ac odio tempor orci dapibus. Aliquam eleifend mi in nulla?</h4>
+            <h4>Caso não apareça nenhuma oferta para agendar, o que faço?</h4>
             <p>
-              Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim.
+              Quando não há ofertas, é exibido uma mensagem que está esgotado ou não há no momento para o seu grupo. Fique sempre atento aos canais oficiais do seu município.
             </p>
           </div>
 
           <div class="col-lg-6 faq-item">
             <i class="bx bx-help-circle"></i>
-            <h4>Tempus quam pellentesque nec nam aliquam sem et tortor consequat?</h4>
+            <h4>Quais documentos devo levar?</h4>
             <p>
-              Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in. Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit adipiscing bibendum est. Purus gravida quis blandit turpis cursus in
+              No ato da vacinação, você deverá levar seus documentos pessoais (RG ou CNH, comprovante de residência, xerox de documento que ateste sua comorbidade ou grupo prioritário (esse documento ficará retido para possíveis conferências)
             </p>
           </div>
 
           <div class="col-lg-6 faq-item">
             <i class="bx bx-help-circle"></i>
-            <h4>Tortor vitae purus faucibus ornare. Varius vel pharetra vel turpis nunc eget lorem dolor?</h4>
+            <h4>O que é evento adverso?</h4>
             <p>
-              Laoreet sit amet cursus sit amet dictum sit amet justo. Mauris vitae ultricies leo integer malesuada nunc vel. Tincidunt eget nullam non nisi est sit amet. Turpis nunc eget lorem dolor sed. Ut venenatis tellus in metus vulputate eu scelerisque.
+              Qualquer ocorrência indesejável após a vacinação, não necessariamente relacionada ao uso da vacina.
             </p>
           </div>
 
+          <div class="col-lg-6 faq-item">
+            <i class="bx bx-help-circle"></i>
+            <h4>Quem investiga casos de eventos adversos pós-vacinação contra COVID-19?</h4>
+            <p>
+              A investigação de eventos adversos às vacinas COVID-19 que vêm sendo aplicadas no Brasil é realizada pelas autoridades de saúde locais responsáveis.
+            </p>
+          </div>
+          
+          <div class="col-lg-6 faq-item">
+            <i class="bx bx-help-circle"></i>
+            <h4>Qual o procedimento deve ser seguido por quem deseja relatar um evento adverso após receber a vacina COVID-19?</h4>
+            <p>
+              Profissionais de saúde devem notificar os eventos adversos pós-vacinação observados nas unidades de saúde ao Programa Nacional de Imunizações por meio do e-SUS Notifica, pelo link: https://notifica.saude.gov.br/onboard.
+              Qualquer pessoa que apresentar um evento adverso pós-vacinação com a vacina COVID-19 pode reportar o evento clicando no botão "reportar evento adverso". 
+            </p>
+          </div>
+          
         </div>
 
       </div>
