--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -3,8 +3,8 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Contact</h2>
-          <p>Magnam dolores commodi suscipituia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>Fale conosco</h2>
+          <p>Informações para contato.</p>
         </div>
       </div>
       <div class="map">
@@ -19,20 +19,20 @@
               <div class="row">
                 <div class="col-lg-4 info">
                   <i class="bi bi-geo-alt"></i>
-                  <h4>Location:</h4>
-                  <p>A108 Adam Street<br>New York, NY 535022</p>
+                  <h4>Localização:</h4>
+                  <p>R. Caramuru, 271 - Centro<br>Pato Branco - PR, 85501-060</p>
                 </div>
 
                 <div class="col-lg-4 info mt-4 mt-lg-0">
                   <i class="bi bi-envelope"></i>
-                  <h4>Email:</h4>
-                  <p>info@example.com<br>contact@example.com</p>
+                  <h4>E-mail:</h4>
+                  <p>secsaude@patobranco.pr.gov.br</p>
                 </div>
 
                 <div class="col-lg-4 info mt-4 mt-lg-0">
                   <i class="bi bi-phone"></i>
-                  <h4>Call:</h4>
-                  <p>+1 5589 55488 51<br>+1 5589 22475 14</p>
+                  <h4>Telefone:</h4>
+                  <p>(46) 3213-1700</p>
                 </div>
               </div>
             </div>
@@ -41,7 +41,8 @@
 
         </div>
 
-        <div class="row mt-5 justify-content-center">
+        <!-- form para contato - Desabilitado por enquanto -->
+        <!-- <div class="row mt-5 justify-content-center">
           <div class="col-lg-10">
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row">
@@ -67,7 +68,7 @@
             </form>
           </div>
 
-        </div>
+        </div> -->
 
       </div>
     </section><!-- End Contact Section -->
